--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "vaiterplay-webhook",
+  "name": "whatsapp-flows-endpoint",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "An example endpoint server for WhatsApp Flows https://developers.facebook.com/docs/whatsapp/flows",
+  "main": "src/server.js",
   "type": "module",
+  "scripts": {
+    "start": "node src/server.js"
+  },
+  "author": "WhatsApp Flows Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.21.2"
   },
-  "scripts": {
-    "start": "node index.js"
-  }
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": []
 }
