--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "whatsapp-flows-endpoint",
   "version": "1.0.0",
   "description": "An example endpoint server for WhatsApp Flows https://developers.facebook.com/docs/whatsapp/flows",
-  "main": "src/server.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "author": "WhatsApp Flows Team",
   "license": "MIT",
